--- a/assets/sass/ie9.scss
+++ b/assets/sass/ie9.scss
@@ -4,21 +4,53 @@
 @import 'libs/skel';
 
 /*
-	Halcyonic by HTML5 UP
+	Landed by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Multi-use */
+/* Loader */
 
-	.button-big {
-		background-image: url('images/ie/button-big.svg');
+	body.landing {
+		&:before, &:after {
+			display: none !important;
+		}
 	}
 
-	.button-big:hover {
-		background-image: url('images/ie/button-big-hover.svg');
+/* Icon */
+
+	.icon {
+		&.alt {
+			color: inherit !important;
+		}
+
+		&.major {
+			&.alt {
+				&:before {
+					color: _palette(fg-bold) !important;
+				}
+			}
+		}
 	}
 
-	.button-big:active {
-		background-image: url('images/ie/button-big-active.svg');
+/* Banner */
+
+	#banner {
+		&:after {
+			background-color: _palette(bg-transparent);
+		}
+	}
+
+/* Footer */
+
+	#footer {
+		.icons {
+			.icon {
+				&.alt {
+					&:before {
+						color: _palette(fg-bold) !important;
+					}
+				}
+			}
+		}
 	}
