--- a/assets/css/ie9.css
+++ b/assets/css/ie9.css
@@ -1,19 +1,33 @@
 /*
-	Halcyonic by HTML5 UP
+	Landed by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Multi-use */
+/* Loader */
 
-	.button-big {
-		background-image: url("images/ie/button-big.svg");
+	body.landing:before, body.landing:after {
+		display: none !important;
 	}
 
-	.button-big:hover {
-		background-image: url("images/ie/button-big-hover.svg");
+/* Icon */
+
+	.icon.alt {
+		color: inherit !important;
 	}
 
-	.button-big:active {
-		background-image: url("images/ie/button-big-active.svg");
+	.icon.major.alt:before {
+		color: #ffffff !important;
+	}
+
+/* Banner */
+
+	#banner:after {
+		background-color: rgba(23, 24, 32, 0.95);
+	}
+
+/* Footer */
+
+	#footer .icons .icon.alt:before {
+		color: #ffffff !important;
 	}
